# Co-op-Salary-Analysis

./: .gitignore  README.md  Waterloo Co-op Salaries List for Analysis.csv  pyproject.toml  requirements.txt
dashboard/: __init__.py  app.py
src/: __init__.py  analysis.py  data_cleaning.py  data_loader.py  utils.py
tests/: __init__.py  test_analysis.py  test_data_loader.py
